--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Limiter==3.3.1
 pymongo==4.3.3
 cloudinary==1.33.0
 python-dotenv==1.0.0
-Werkzeug==2.3.0
+Werkzeug>=3.1.0
 email-validator==2.0.0
 bcrypt==4.0.1
 flask-compress==1.13.0
